# IP-Reality

./: .gitignore  README.md  build.bat  install.sh  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  exceptions.py  fetcher.py  ledger_dl.py  reporter.py  verifier.py
tests/: __init__.py  test_reporter.py  test_verifier.py
