[project]
name = "ip-reality"
version = "2.0.0"
description = "REALITY 节点发现工具 — 基于 CT 日志 + TLS 账本的 CF 配置特性检测"
authors = [{name = "IP-Reality"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cryptography>=41.0",
    "aiodns>=3.1",
    "colorama>=0.4",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
geoip = ["geoip2>=4.0"]
proxy = ["python-socks[asyncio]>=2.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "mypy>=1.0"]

[project.scripts]
qian = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
